<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Until When?</string>
    <string name="action_settings">Settings</string>
    <string name="day_time">Day Times:</string>
    <string name="night_time">Night Times:</string>
    <string name="day">Day:</string>
    <string name="night">Night:</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="day_length">Day Length:</string>
    <string name="night_length">Night Length:</string>
    <string name="add_btn">Add</string>
    <string name="remove_btn">Remove</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="equally">Equally</string>
    <string name="custom">Custom</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="type_name">Type a Name</string>
    <string name="select_day_length">Select Day Length</string>
    <string name="select_night_length">Select Night Length</string>
    <string name="select_cycles">Select Number of Cycles</string>
    <string name="make_list">Make List</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="share_via">Share Via...</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="empty_list">Press \"Add\" Button</string>
    <string name="empty_lists">Your lists are empty!</string>
    <string name="empty_name">And you expect me to guess the name?!</string>
    <string name="no_selection">Remove What?!</string>
    <string name="cycles">Cycles</string>
    <string name="length">Length</string>
    <string-array name="titles">
        <item>Data</item>
        <item>Day List</item>
        <item>Night List</item>
    </string-array>
    <string name="title_activity_list">ListActivity</string>
    <string name="continue_btn">Continue</string>

</resources>