<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hourPicker"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="1" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/minutePicker"
            android:layout_weight="1">

        </NumberPicker>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelBtn"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/okBtn"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</RelativeLayout>