<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- <EditText
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:inputType="date"
        android:padding="16dp"
        android:text="@string/select_date"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textColor="#ff000000"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:id="@+id/dateTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="#ff000000"
        android:textSize="20sp"
        android:visibility="gone" />
-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:id="@+id/dateBtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="20sp" />

    <GridLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dateBtn"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/dayTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="@string/day_time"
            android:textColor="#ff000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nightTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:text="@string/night_time"
            android:textColor="#ff000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dayStartView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="time"
                android:text="@string/start"
                android:textSize="16sp"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="-"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/dayEndView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="time"
                android:text="@string/end"
                android:textSize="16sp"
                android:textColor="#ff000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_row="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nightStartView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="time"
                android:text="@string/start"
                android:textSize="16sp"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="-"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nightEndView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="time"
                android:text="@string/end"
                android:textSize="16sp"
                android:textColor="#ff000000" />
        </LinearLayout>

    </GridLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/timeLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#1f000000"
        android:visibility="visible" />

    <GridLayout
        android:id="@+id/lengthLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:paddingRight="5dp"
            android:paddingTop="3dp"
            android:text="@string/day_length"
            android:textColor="#ff000000"
            android:textSize="16sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:id="@+id/dayGroup"
            android:checkedButton="@+id/dayEqually"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/dayEqually"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equally"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/dayCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                android:textSize="16sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/dayCyclesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="9"
            android:inputType="number"
            android:text="@string/cycles"
            android:textSize="16sp"
            android:focusable="false"
            android:visibility="visible"
            android:gravity="center"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/dayLengthView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:focusable="false"
            android:gravity="center"
            android:inputType="time"
            android:text="@string/length"
            android:textColor="#57000000"
            android:layout_column="1"
            android:layout_row="2"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/night_length"
            android:textColor="#ff000000"
            android:textSize="16sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:paddingTop="5dp"
            android:id="@+id/nightGroup"
            android:checkedButton="@+id/nightEqually"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/nightEqually"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equally"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/nightCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                android:textSize="16sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/nightCyclesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:ems="9"
            android:inputType="number"
            android:text="@string/cycles"
            android:textSize="16sp"
            android:focusable="false"
            android:visibility="visible"
            android:gravity="center"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/nightLengthView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:focusable="false"
            android:gravity="center"
            android:inputType="time"
            android:text="@string/length"
            android:textColor="#57000000"
            android:layout_column="1"
            android:layout_row="5"
            android:textSize="16sp"
            android:visibility="gone" />

    </GridLayout>

</RelativeLayout>